--- a/styles/style.css
+++ b/styles/style.css
@@ -375,7 +375,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 13px;
+  padding: 9px 13px;
 }
 .header-btn__text {
   padding: 7px 20px 7px 10px;
@@ -934,7 +934,7 @@ body {
   background-color: #f8f8f8;
   border: 1px solid transparent;
   font-size: 16px;
-  line-height: 20;
+  line-height: 20px;
   font-weight: 500;
   color: #383838;
   cursor: pointer;
