--- a/styles/style.scss
+++ b/styles/style.scss
@@ -436,7 +436,7 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 0 13px;
+            padding: 9px 13px;
         }
 
         &__text {
@@ -1124,7 +1124,7 @@ body {
         background-color: $color1;
         border: 1px solid transparent;
         font-size: 16px;
-        line-height: 20;
+        line-height: 20px;
         font-weight: 500;
         color: $main;
         cursor: pointer;
