--- a/styles/style.css
+++ b/styles/style.css
@@ -375,7 +375,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 9px 13px;
+  padding: 0px 13px;
+  height: 100%;
 }
 .header-btn__text {
   padding: 7px 20px 7px 10px;
@@ -910,7 +911,22 @@ body {
 .modal {
   padding: 70px 48px 45px 40px;
   border-radius: 4px;
-  display: none;
+  width: 600px;
+  background-color: #fff;
+}
+.modal__close {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  font-size: 0;
+  cursor: pointer;
+  height: 22px;
+  width: 22px;
+  z-index: 5;
+}
+.modal__close-img {
+  width: 100%;
+  height: 100%;
 }
 .modal__title {
   font-size: 36px;
@@ -959,5 +975,3 @@ body {
   color: #0B0B0B;
   text-decoration: underline;
 }
-
-/*# sourceMappingURL=style.css.map */
