Написал свой JS для модалки

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -436,8 +436,8 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 0px 13px;
-            height: 100%;
+            padding: 9px 13px;
+            height: inherit;
         }
 
         &__text {
