--- a/styles/style.css
+++ b/styles/style.css
@@ -376,7 +376,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 0px 13px;
-  height: 100%;
+  height: inherit;
 }
 .header-btn__text {
   padding: 7px 20px 7px 10px;
